Java Web/Spring Advanced/6. Error Handling/errors/src/main/java/com/example/errors/config/ErrorConfig.java
package com.example.errors.config;

import org.springframework.context.annotation.Bean;
import org.springframework.context.annotation.Configuration;
import org.springframework.web.servlet.handler.SimpleMappingExceptionResolver;

import java.util.Properties;

@Configuration
public class ErrorConfig {

    @Bean
    SimpleMappingExceptionResolver simpleMappingExceptionResolver() {
        SimpleMappingExceptionResolver resolver = new SimpleMappingExceptionResolver();

        Properties properties = new Properties();

        properties.setProperty(IllegalArgumentException.class.getSimpleName(), "iae");

        resolver.setExceptionMappings(properties);


        return resolver;
    }
}
